remove flex grow from links grid to prevent images from stretching

--- a/style/links-grid.css
+++ b/style/links-grid.css
@@ -13,6 +13,7 @@ section {
   flex-wrap: wrap;
   /* margin-top: 2%; */  
   max-width: 100%;
+  justify-content: center;
 }
 
 #welcome {
@@ -23,13 +24,17 @@ section {
   color: #13293d;
 }
 
+#welcome:hover{
+  font-weight: bolder;
+}
+
 a{
   text-decoration: none;
 }
 
 .square {
-  flex: 1 0 0;
-  padding: 10px;
+  flex: 0 1 1;
+  /* padding: 10px; */
   text-align: center;
   /* border-style: solid;
   border-width: 1px; */
@@ -37,14 +42,14 @@ a{
 
 .square header {
   border-radius: 20px 20px 0 0;
-  padding: 17px;
+  padding: 10px;
   background: #13293d;
   color: #fff;
 }
 
 .square img {
   border-radius: 0px 0px 20px 20px;
-  width: 100%;
+  width: 350px;
   height: 350px;
   min-width: 300px;
 }
