--- a/style/style.css
+++ b/style/style.css
@@ -20,6 +20,9 @@ nav {
   text-align: center;
 }
 
+iframe{
+  border-radius: 20px;
+}
 
 .gallery{
     background-image: url('../images/kaytranada.jpg');
